main/csel/parser/.antlr/CSELParser.py
# Generated from d:\Study\Year_3\PPL_2\BTL_10\assignment3\initial\src\main\csel\parser\CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'Else'", "'Elif'", "'For'", "'Function'", "'If'", 
                     "'Return'", "'Number'", "'While'", "'Call'", "'Of'", 
                     "'In'", "'Let'", "'Boolean'", "'String'", "'JSON'", 
                     "'Array'", "'Constant'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'='", "'==.'", "'+.'", "'('", 
                     "')'", "'['", "']'", "':'", "'.'", "','", "';'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "IDD", "IDND", "INT", "FLOAT", "BOOLEAN_LIT", 
                      "STRING_LIT", "BREAK", "CONTINUE", "ELSE", "ELIF", 
                      "FOR", "FUNCTION", "IF", "RETURN", "NUMBER", "WHILE", 
                      "CALL", "OF", "IN", "LET", "BOOLEAN", "STRING", "JSON", 
                      "ARRAY", "CONSTANT", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "FACT", "AND", "OR", "EQU", "NQU", "LT", "GT", "LTE", 
                      "GTE", "EQUAL", "EQUDOT", "ADDDOT", "LP", "RP", "LSB", 
                      "RSB", "COLON", "DOT", "COMMA", "SEMI", "LCB", "RCB", 
                      "WS", "COMMENT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declare = 1
    RULE_var_declare = 2
    RULE_const_declare = 3
    RULE_list_const = 4
    RULE_func_declare = 5
    RULE_params_list = 6
    RULE_variable_func = 7
    RULE_list_var = 8
    RULE_constant = 9
    RULE_variable = 10
    RULE_compound_stmt = 11
    RULE_declare_stmt = 12
    RULE_stmt = 13
    RULE_assign_stmt = 14
    RULE_if_stmt = 15
    RULE_for_in = 16
    RULE_for_of = 17
    RULE_while_stmt = 18
    RULE_break_stmt = 19
    RULE_continue_stmt = 20
    RULE_call_stmt = 21
    RULE_return_stmt = 22
    RULE_call_exp = 23
    RULE_exps_list = 24
    RULE_ex = 25
    RULE_exp = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_exp7 = 33
    RULE_operands = 34
    RULE_index_exp = 35
    RULE_key_exp = 36
    RULE_array = 37
    RULE_json = 38
    RULE_literal = 39

    ruleNames =  [ "program", "declare", "var_declare", "const_declare", 
                   "list_const", "func_declare", "params_list", "variable_func", 
                   "list_var", "constant", "variable", "compound_stmt", 
                   "declare_stmt", "stmt", "assign_stmt", "if_stmt", "for_in", 
                   "for_of", "while_stmt", "break_stmt", "continue_stmt", 
                   "call_stmt", "return_stmt", "call_exp", "exps_list", 
                   "ex", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "operands", "index_exp", "key_exp", "array", 
                   "json", "literal" ]

    EOF = Token.EOF
    IDD=1
    IDND=2
    INT=3
    FLOAT=4
    BOOLEAN_LIT=5
    STRING_LIT=6
    BREAK=7
    CONTINUE=8
    ELSE=9
    ELIF=10
    FOR=11
    FUNCTION=12
    IF=13
    RETURN=14
    NUMBER=15
    WHILE=16
    CALL=17
    OF=18
    IN=19
    LET=20
    BOOLEAN=21
    STRING=22
    JSON=23
    ARRAY=24
    CONSTANT=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    FACT=31
    AND=32
    OR=33
    EQU=34
    NQU=35
    LT=36
    GT=37
    LTE=38
    GTE=39
    EQUAL=40
    EQUDOT=41
    ADDDOT=42
    LP=43
    RP=44
    LSB=45
    RSB=46
    COLON=47
    DOT=48
    COMMA=49
    SEMI=50
    LCB=51
    RCB=52
    WS=53
    COMMENT=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    UNTERMINATED_COMMENT=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.DeclareContext)
            else:
                return self.getTypedRuleContext(CSELParser.DeclareContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT))) != 0):
                self.state = 80
                self.declare()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(CSELParser.Var_declareContext,0)


        def const_declare(self):
            return self.getTypedRuleContext(CSELParser.Const_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(CSELParser.Func_declareContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_declare




    def declare(self):

        localctx = CSELParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.var_declare()
                pass
            elif token in [CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.const_declare()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.func_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def list_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.List_varContext)
            else:
                return self.getTypedRuleContext(CSELParser.List_varContext,i)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_var_declare




    def var_declare(self):

        localctx = CSELParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(CSELParser.LET)
            self.state = 94
            self.list_var()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.COMMA:
                self.state = 95
                self.match(CSELParser.COMMA)
                self.state = 96
                self.list_var()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(CSELParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def list_const(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.List_constContext)
            else:
                return self.getTypedRuleContext(CSELParser.List_constContext,i)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_const_declare




    def const_declare(self):

        localctx = CSELParser.Const_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_const_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(CSELParser.CONSTANT)
            self.state = 105
            self.list_const()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.COMMA:
                self.state = 106
                self.match(CSELParser.COMMA)
                self.state = 107
                self.list_const()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(CSELParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_constContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(CSELParser.ConstantContext,0)


        def EQUAL(self):
            return self.getToken(CSELParser.EQUAL, 0)

        def ex(self):
            return self.getTypedRuleContext(CSELParser.ExContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def NUMBER(self):
            return self.getToken(CSELParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(CSELParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(CSELParser.BOOLEAN, 0)

        def JSON(self):
            return self.getToken(CSELParser.JSON, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_list_const




    def list_const(self):

        localctx = CSELParser.List_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.constant()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 116
                self.match(CSELParser.COLON)
                self.state = 117
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.STRING) | (1 << CSELParser.JSON))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 120
            self.match(CSELParser.EQUAL)
            self.state = 121
            self.ex()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def IDND(self):
            return self.getToken(CSELParser.IDND, 0)

        def LP(self):
            return self.getToken(CSELParser.LP, 0)

        def RP(self):
            return self.getToken(CSELParser.RP, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(CSELParser.Compound_stmtContext,0)


        def params_list(self):
            return self.getTypedRuleContext(CSELParser.Params_listContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_func_declare




    def func_declare(self):

        localctx = CSELParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(CSELParser.FUNCTION)
            self.state = 124
            self.match(CSELParser.IDND)
            self.state = 125
            self.match(CSELParser.LP)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.IDND:
                self.state = 126
                self.params_list()


            self.state = 129
            self.match(CSELParser.RP)
            self.state = 130
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Params_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Variable_funcContext)
            else:
                return self.getTypedRuleContext(CSELParser.Variable_funcContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_params_list




    def params_list(self):

        localctx = CSELParser.Params_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.variable_func()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.COMMA:
                self.state = 133
                self.match(CSELParser.COMMA)
                self.state = 134
                self.variable_func()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDND(self):
            return self.getToken(CSELParser.IDND, 0)

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.INT)
            else:
                return self.getToken(CSELParser.INT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_variable_func




    def variable_func(self):

        localctx = CSELParser.Variable_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(CSELParser.IDND)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LSB:
                self.state = 141
                self.match(CSELParser.LSB)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CSELParser.INT:
                    self.state = 142
                    self.match(CSELParser.INT)


                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.COMMA:
                    self.state = 145
                    self.match(CSELParser.COMMA)
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CSELParser.INT:
                        self.state = 146
                        self.match(CSELParser.INT)


                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(CSELParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(CSELParser.VariableContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def EQUAL(self):
            return self.getToken(CSELParser.EQUAL, 0)

        def ex(self):
            return self.getTypedRuleContext(CSELParser.ExContext,0)


        def NUMBER(self):
            return self.getToken(CSELParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(CSELParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(CSELParser.BOOLEAN, 0)

        def JSON(self):
            return self.getToken(CSELParser.JSON, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_list_var




    def list_var(self):

        localctx = CSELParser.List_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.variable()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 158
                self.match(CSELParser.COLON)
                self.state = 159
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.STRING) | (1 << CSELParser.JSON))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.EQUAL:
                self.state = 162
                self.match(CSELParser.EQUAL)
                self.state = 163
                self.ex()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDD(self):
            return self.getToken(CSELParser.IDD, 0)

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.INT)
            else:
                return self.getToken(CSELParser.INT, i)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_constant




    def constant(self):

        localctx = CSELParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(CSELParser.IDD)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LSB:
                self.state = 167
                self.match(CSELParser.LSB)
                self.state = 168
                self.match(CSELParser.INT)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.COMMA:
                    self.state = 169
                    self.match(CSELParser.COMMA)
                    self.state = 170
                    self.match(CSELParser.INT)
                    self.state = 175
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 176
                self.match(CSELParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDND(self):
            return self.getToken(CSELParser.IDND, 0)

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.INT)
            else:
                return self.getToken(CSELParser.INT, i)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COMMA)
            else:
                return self.getToken(CSELParser.COMMA, i)

        def getRuleIndex(self):
            return CSELParser.RULE_variable




    def variable(self):

        localctx = CSELParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(CSELParser.IDND)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LSB:
                self.state = 180
                self.match(CSELParser.LSB)
                self.state = 181
                self.match(CSELParser.INT)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.COMMA:
                    self.state = 182
                    self.match(CSELParser.COMMA)
                    self.state = 183
                    self.match(CSELParser.INT)
                    self.state = 188
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 189
                self.match(CSELParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(CSELParser.LCB, 0)

        def RCB(self):
            return self.getToken(CSELParser.RCB, 0)

        def declare_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Declare_stmtContext)
            else:
                return self.getTypedRuleContext(CSELParser.Declare_stmtContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_compound_stmt




    def compound_stmt(self):

        localctx = CSELParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compound_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(CSELParser.LCB)
            self.state = 196
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.IDD) | (1 << CSELParser.IDND) | (1 << CSELParser.INT) | (1 << CSELParser.FLOAT) | (1 << CSELParser.BOOLEAN_LIT) | (1 << CSELParser.STRING_LIT) | (1 << CSELParser.BREAK) | (1 << CSELParser.CONTINUE) | (1 << CSELParser.FOR) | (1 << CSELParser.IF) | (1 << CSELParser.RETURN) | (1 << CSELParser.WHILE) | (1 << CSELParser.CALL) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT) | (1 << CSELParser.SUB) | (1 << CSELParser.LP) | (1 << CSELParser.LSB) | (1 << CSELParser.LCB))) != 0):
                self.state = 193
                self.declare_stmt()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 199
            self.match(CSELParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(CSELParser.Var_declareContext,0)


        def const_declare(self):
            return self.getTypedRuleContext(CSELParser.Const_declareContext,0)


        def stmt(self):
            return self.getTypedRuleContext(CSELParser.StmtContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_declare_stmt




    def declare_stmt(self):
